# aiScraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ai_scraper/: __init__.py  __main__.py  config.py
ai_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai_scraper/api/: __init__.py  routes.py  server.py
ai_scraper/deduplicator/: __init__.py
ai_scraper/enrichment/: __init__.py
ai_scraper/normalizer/: models.py  normalizer.py
ai_scraper/poller/: __init__.py  burp_mcp_client.py  models.py  poller.py
ai_scraper/storage/: __init__.py  models.py  storage.py
deploy/: README.md
deploy/launchd/: com.aiscraper.local.plist
deploy/systemd/: ai-scraper.service
scripts/: setup_local.sh
tests/: conftest.py  test_api.py  test_client.py  test_config.py  test_deduplicator.py  test_enrichment.py  test_normalizer.py  test_poller.py  test_storage.py
