[project]
name = "ai-scraper"
version = "0.1.0"
description = "AI Scraper — Burp Suite proxy traffic ingestion & normalization service for bug bounty orchestration"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25,<1.0",
    "pydantic>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "apscheduler>=3.10,<4.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_scraper*"]
